--- a/home.html
+++ b/home.html
@@ -13,5 +13,6 @@ online ? 'Online' : 'Offline';
 onoffline="update(false)"
 onload="update(navigator.onLine)">
 <p>You are: <span id="status">(Unknown)</span></p>
+<p size="4"> Hello,world!<p>
 </body>
 </html>
