--- a/home.html
+++ b/home.html
@@ -13,6 +13,6 @@ online ? 'Online' : 'Offline';
 onoffline="update(false)"
 onload="update(navigator.onLine)">
 <p>You are: <span id="status">(Unknown)</span></p>
-<p size="4"> Hello,world!<p>
+<p><font size="24">I would like to say</font> Hello,world!<p>
 </body>
 </html>
